[package]
name = "generator-combinator"
version = "0.1.0"
authors = ["Adam Shirey <adam@shirey@ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.0", optional = true }

[features]
std = []
default = ["std"]
#default = []
with_rand = ["rand"]
