[package]
name = "generator-combinator"
version = "0.4.0"
authors = ["Adam Shirey <adam@shirey.ch>"]
edition = "2021"

description = "Composes combinators to generate patterns of increasing complexity"
readme = "README.md"
homepage = "https://github.com/aeshirey/generator-combinator/"
repository = "https://github.com/aeshirey/generator-combinator/"
license = "MIT OR Apache-2.0"
keywords = ["generator", "combinator"]

[dependencies]
rand = { version = "0.8.0", optional = true }

[dev-dependencies]
quickcheck = "1"

[features]
default = []
with_rand = ["rand"]
